--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "bcrypt": "^3.0.6",
     "history": "^4.9.0",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.5.0",
