--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "express": "^4.17.1",
+    "google-map-react": "^1.1.4",
     "history": "^4.9.0",
     "meteor-node-stubs": "^0.4.1",
     "meteor-redux-middlewares": "^3.0.7",
