--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "meteor-node-stubs": "^0.4.1",
     "meteor-redux-middlewares": "^3.0.7",
     "react": "^16.5.0",
+    "react-datepicker": "^2.7.0",
     "react-dom": "^16.5.0",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.0",
