--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "^16.5.0",
     "react-datepicker": "^2.7.0",
     "react-dom": "^16.5.0",
+    "react-geo-picker": "^0.2.4",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
